2004-01-21  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

	* it.po: Updated by Andrea.

	* sv.po: Updated by Peter.

2004-01-11  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

	* POTFILES.in: Added src/screenshot.c src/autostart.c src/sound.c
	src/event.c

2003-11-30  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

2003-11-27  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

2003-11-07  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

2003-11-06  pottendo  <pottendo@utanet.at>

	* Makefile.in.in (datadir,localedir,gnulocaledir,gettextsrcdir): 
	Added $(DESTDIR)

	* de.po: Updated.

2003-11-02  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

2003-11-02  Andreas Boose  <viceteam@t-online.de>

	* POTFILES.in: Renamed `mouse.c'.

2003-10-09  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

	* it.po: update by Andrea.

2003-09-20  pottendo  <pottendo@utanet.at>

	* sv.po, pl.po: Updated by Peter, Flooder.

2003-09-07  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

	* it.po,de.po,fr.po,sv.po,pl.po: Changed version to 1.13
	
2003-06-21  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

2003-06-02  pottendo  <pottendo@utanet.at>

	* it.po: Updated by Andrea.

2003-05-30  pottendo  <pottendo@utanet.at>

	* pl.po: Updated by Flooder.

2003-05-26  pottendo  <pottendo@utanet.at>

	* sv.po: Updated by Peter.

2003-04-24  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

2003-01-25  pottendo  <pottendo@utanet.at>

	* it.po: Updated by Andrea.

	* de.po: Updated.

	* sv.po: Updated by Peter.

2003-01-19  pottendo  <pottendo@utanet.at>

	* pl.po: Updated by Flooder.

2003-01-16  pottendo  <pottendo@utanet.at>

	* POTFILES.in: Updated file list.

	* sv.po,it.po,pl.po.fr.po: Prepared for 1.11.
	* de.po: Updated.

2003-01-01  Andreas Boose  <viceteam@t-online.de>

	* POTFILES.in: Added new drive UI files.

2002-10-13  Andreas Boose  <viceteam@t-online.de>

	* POTFILES.in: Changed `main_exit.c' into `unixmain.c'.
